--- a/ProgettoMuschera0338276.ipynb
+++ b/ProgettoMuschera0338276.ipynb
@@ -358,7 +358,7 @@
    "id": "707f85bf-36fe-4e9a-a927-5985a62162bf",
    "metadata": {},
    "source": [
-    "Il primo modello che si va a definire è quello di Random Forest. Questo modello spesso viene utilizzato, con buoni risultati, per i task di classificazione. Si sceglie perrtanto di partire con questo modello anche per fornire una baseline a tutti i successivi modelli. Difficilmente questo potrà essere il miglior modello, ma lo si userà come metro di paragone per i successivi modelli. \n",
+    "Il primo modello che si va a definire è quello di Random Forest. Questo modello spesso viene utilizzato, con buoni risultati, per i task di classificazione. Si sceglie perrtanto di partire con questo modello anche per fornire una baseline a tutti i successivi modelli. Difficilmente questo potrà essere il miglior modello, ma lo si userà come metro di paragone. \n",
     "<br>\n",
     "Si utilizza una grid search per cercare di ottenere il miglior modello tra tutti quelli considerati. "
    ]
@@ -651,7 +651,7 @@
     "Questa CNN è stata realizzata ispirandosi a *LeNet*, alternando dunque livelli di convoluzione e livelli di pooling. Si sono poi aggiunti in coda dei livelli densi per la classificazione delle immagini, effettuata utilizzando le feature estratte dai filtri dei livelli convoluzionali. \n",
     "<br>\n",
     "Per evitare di rendere il notebook eccessivamente lungo si è riportata direttamente la versione che ha mostrato le migliori performance. In particolare, si sono provati diversi valori per il numero di filtri e la loro dimensione. Inoltre si è visto che, per questa rete, l'utilizzo dell'average pooling produce risultati migliori rispetto al max pooling. \n",
-    "Anche l'utilizzo di funzioni per la regolarizzazione non ha migliorato il modello, producendo underfitting.\n",
+    "Anche l'utilizzo di funzioni per la norm penalties (L1, L2) non ha migliorato il modello, producendo underfitting.\n",
     "<br>\n",
     "Essendo questa la prima CNN realizzata, si è scelto di realizzare un modello relativamente semplice per osservarne le prestazioni. Si è inoltre visto che l'aggiunta di ulteriori hidden units non portava a miglioramenti sensibili sull'accuracy, ma solo a tempi di addestramento più lunghi. \n",
     "<br>\n",
@@ -872,7 +872,7 @@
    "source": [
     "Con l'obiettivo di avere un modello che generalizzi meglio su dati che non ha mai visto in precedenza si sceglie di inserire nella CNN appena definita dei livelli di Dropout. \n",
     "<br>\n",
-    "La rete precedente, infatti, sembrava ottenere spesso risultati migliori sul testing set rispetto al validation set. Questo potrebbe voler dire che quella rete stava imparando (almeno in parte) pattern specifici del training set, andando leggermente in overfitting. Questo ha contribuito a determinare la scelta dell'impiego del Dropout. \n",
+    "La rete precedente, infatti, sembrava ottenere spesso risultati migliori sul training set rispetto al validation set. Questo potrebbe voler dire che quella rete stava imparando (almeno in parte) pattern specifici del training set, andando leggermente in overfitting. Questo ha contribuito a determinare la scelta dell'impiego del Dropout. \n",
     "Il dropout è stato inserito sia per i livelli densi, sia dopo i livelli di pooling. I valori migliori si sono rivelati 0.35 per i livelli di Pooling e 0.7 per quelli Dense."
    ]
   },
@@ -1375,11 +1375,11 @@
    "id": "70780dd9-634e-4aba-b033-469a2c522330",
    "metadata": {},
    "source": [
-    "Anche questa terza evoluzione della CNN tuttavia porta un miglioramento dell'accuracy rispetto al testing set. \n",
+    "Anche questa terza evoluzione della CNN porta un miglioramento dell'accuracy rispetto al testing set. \n",
     "<br>\n",
     "Si è provato ad utilizzare la batch normalization sia con il dropout che senza. Si è anche provato ad usarla solo per i livelli densi o solo per quelli convoluzionali. Alla fine la versione che ha portato ai migliori risultati è stata quella riportata in questo notebook. \n",
     "<br>\n",
-    "Questa versione della CNN ha un accuracy sul testing set del 97.71%, oltre ad avere tempi di addestramento minori."
+    "Questa versione della CNN ha un accuracy sul testing set del 97.71%, oltre ad avere tempi di addestramento minori rispetto al modello precedente."
    ]
   },
   {
@@ -1475,7 +1475,7 @@
    "source": [
     "Per questo nuovo modello si è scelto di utilizzare nuovamente una CNN, stavolta però ispirandosi a *GoogLeNet*. In particolare si è pensato di creare una rete più complessa della precedente, e cercare di andare a creare un blocco simile a quello Inception. In questo blocco si è andati a concatenare l'output di vari branch convoluzionali, in cui sono stati utilizzati kernel e/o pooling con dimensioni diverse.\n",
     "<br>\n",
-    "Per quanto riguarda il blocco ispirato a quello Inception, sono stati utilizzati filtri di dimensioni diverse. Si è ripetuto l'addestramento più volte, alla ricerca delle migliori dimensioni per i kernel. La rete ha mostrato di riuscire a produrre i risultati migliori con l'utilizzo di filtri più grandi rispetto a quelli dell'Inception block \"standard\". \n",
+    "Si è ripetuto l'addestramento più volte, alla ricerca delle migliori dimensioni per i kernel. La rete ha mostrato di riuscire a produrre i risultati migliori con l'utilizzo di filtri più grandi rispetto a quelli dell'Inception block \"standard\". \n",
     "<br>\n",
     "Inoltre, il vantaggio di cui dispone questa rete rispetto alla precedente, è di poter applicare in parallelo filtri di dimensione diversa sull'input, e poi concatenare i risultati."
    ]
@@ -2008,7 +2008,7 @@
    "id": "f80a8eef-7495-47e2-872b-ad5eed55aaf5",
    "metadata": {},
    "source": [
-    "Il numero di parametri di questa rete oltra è molto più alto rispetto alla sua versione con un solo blocco Inception."
+    "Il numero di parametri di questa rete ora è molto più alto rispetto alla sua versione con un solo blocco Inception."
    ]
   },
   {
@@ -2402,7 +2402,7 @@
     "<br>\n",
     "Questo è probabilmente dovuto anche alla tipologia delle immagini del dataset, che sono di natura medica. Infatti, osservando anche le immagini visualizzate nelle fasi preliminari di questo notebook, è possibile vedere come il loro livello di zoom e di rotazione sia sempre estremamente simile. Questo è dovuto proprio alla natura scientifica delle immagini, che sono quindi realizzate in maniera rigorosa. \n",
     "<br>\n",
-    "Questo aspetto si riflette infatti anche sui milgiori parametri trovati per l'ImageDataGenerator: sono tutti valori che indicano trasformazioni minime delle immagini di input originali. Andando ad alzare questi valori l'accuracy del modello scede ulteriormente. \n",
+    "Questo aspetto si riflette infatti anche sui milgiori parametri trovati per l'ImageDataGenerator: sono tutti valori che indicano trasformazioni minime delle immagini di input originali. Andando ad alzare questi valori, l'accuracy del modello scede ulteriormente. \n",
     "<br>\n",
     "Probabilmente, su un dataset con immagini meno \"standardizzate\" questo approccio avrebbe portato a risultati migliori, aiutando la rete a generalizzare meglio. In questo caso invece è possibile che, andando a modificare le immagini per l'addestramento, si sia tolta alla rete la possibilità di imparare dei pattern che poi avrebbe ritrovato anche in fase di validazione/testing."
    ]
